fixed code errors

--- a/about.html
+++ b/about.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nunito+Sans:ital,opsz,wdth,wght@0,6..12,75..125,200..1000;1,6..12,75..125,200..1000&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e7a612131e.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +20,7 @@
 
 <body>
     <header>
-        <div class=container>
+        <div class="container">
             <div class="navtoggle" id="myNavtoggle">
             <img class="logo" src="img/about/danielle-logo.svg" alt="Danielle logo">
             <nav>
@@ -73,7 +71,7 @@
                     </p>
                 </div>
                 <div class="col-md-12 col-lg-5" id="skills">
-                    <h2>Skills & Tools</h2>
+                    <h2>Skills &amp; Tools</h2>
                     <div class="row">
                         <div class="col-md-6">
                             <h3>Relevant Skills</h3>
@@ -119,9 +117,9 @@
     <footer>
         <div class="container" id="contact">
             <h2>Get in touch with me!</h2>
-            <p>Feel free to reach out to me <a href="tel: 8888888888">by phone</a> or follow my journey on social
+            <p>Feel free to reach out to me <a href="tel:8888888888">by phone</a> or follow my journey on social
                 media.</p>
-            <a href="mailto: dbdupuis@gmail.com" class="button contact">Email me</a>
+            <a href="mailto:dbdupuis@gmail.com" class="button secondary">Email me</a>
             <ul class="social">
                 <li><a href="https://www.linkedin.com/in/danielle-dupuis-141b30159/" target="_blank"><svg width="32"
                             height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
