--- a/chicago-skyline.html
+++ b/chicago-skyline.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nunito+Sans:ital,opsz,wdth,wght@0,6..12,75..125,200..1000;1,6..12,75..125,200..1000&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e7a612131e.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
@@ -17,7 +15,7 @@
     <meta name="author" content="Danielle DuPuis">
     <meta name="description"
         content="Danielle DuPuis is a UX Designer and Marketing Professional based in Denver, Colorado.">
-    <title>Danielle DuPuis - Designer & Marketer</title>
+    <title>Danielle DuPuis - Designer &amp; Marketer</title>
 </head>
 
 <body>
@@ -39,16 +37,15 @@
     <main>
         <div class="container">
             <div class="row">
-                <?xml version="1.0" encoding="UTF-8"?>
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 750 500"
                     class="chicago">
                     <defs>
-                        <clipPath id="clippath">
+                        <clippath id="clippath">
                             <rect class="frame" width="750" height="500" />
-                        </clipPath>
-                        <clipPath id="clippath-1">
+                        </clippath>
+                        <clippath id="clippath-1">
                             <rect class="cls-1" width="750" height="500" />
-                        </clipPath>
+                        </clippath>
                     </defs>
                     <g id="BACKGROUND">
                         <g class="bf-frame">
@@ -206,9 +203,9 @@
     <footer>
         <div class="container" id="contact">
             <h2>Get in touch with me!</h2>
-            <p>Feel free to reach out to me <a href="tel: 8888888888">by phone</a> or follow my journey on social
+            <p>Feel free to reach out to me <a href="tel:8888888888">by phone</a> or follow my journey on social
                 media.</p>
-            <a href="mailto: dbdupuis@gmail.com" class="button contact">Email me</a>
+            <a href="mailto:dbdupuis@gmail.com" class="button secondary">Email me</a>
             <ul class="social">
                 <li><a href="https://www.linkedin.com/in/danielle-dupuis-141b30159/" target="_blank"><svg width="32"
                             height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
