--- a/georgie.html
+++ b/georgie.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nunito+Sans:ital,opsz,wdth,wght@0,6..12,75..125,200..1000;1,6..12,75..125,200..1000&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e7a612131e.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -95,7 +93,7 @@
                     <picture>
                         <source srcset="img/georgie/1x/img-affinity-mapping-1x.png" media="(max-width:767px)">
                         <img src="img/georgie/2x/img-affinity-mapping-2x.png"
-                            alt="Affinity map showcasing all the data Danielle collected through user interviews." .">
+                            alt="Affinity map showcasing all the data Danielle collected through user interviews.">
                     </picture>
                 </div>
                 <p>Finally, I was able to compile all of this research and data into something useful: Georgie's user
@@ -109,7 +107,7 @@
                 </div>
             </div>
             <div class="section">
-                <h3>Ideation & Wireframing</h3>
+                <h3>Ideation &amp; Wireframing</h3>
                 <p>Keeping all of these traits in mind, I began mapping out everyday tasks that Georgie could help them
                     accomplish. This is
                     where the idea of a character came to me. Who said personal finance had to be dull and full of
@@ -185,15 +183,15 @@
                         Severity)</li>
                     <li>One user did not recognize the hamburger navigation menu in the top-left corner. (High Severity)
                     </li>
-                    <li>Users did not know what stage of "Send & Request Money" they were at. (High Severity)</li>
-                    <li>Users did not expect to be redirected to the Send & Request Money home screen after completing
+                    <li>Users did not know what stage of "Send &amp; Request Money" they were at. (High Severity)</li>
+                    <li>Users did not expect to be redirected to the Send &amp; Request Money home screen after completing
                         the task in the user test requiring them to send money to a friend. (High Severity)</li>
                     <li>When prompted to make a payment, users tried to access their credit cards on the accounts
                         section of their dashboard. (Medium Severity)</li>
                 </ol>
             </div>
             <div class="section">
-                <h3>High-Fidelity Wireframes & Prototype</h3>
+                <h3>High-Fidelity Wireframes &amp; Prototype</h3>
                 <p>After brainstorming ways to solve the issues discovered during usability testing, I created
                     high-fidelity wireframes and
                     another functional prototype of Georgie. You can see the newest prototype <a
@@ -227,9 +225,9 @@
     <footer>
         <div class="container" id="contact">
             <h2>Get in touch with me!</h2>
-            <p>Feel free to reach out to me <a href="tel: 8038738013">by phone</a> or follow my journey on social
+            <p>Feel free to reach out to me <a href="tel:8888888888">by phone</a> or follow my journey on social
                 media.</p>
-            <a href="mailto: dbdupuis@gmail.com" class="button contact">Email me</a>
+            <a href="mailto:dbdupuis@gmail.com" class="button secondary">Email me</a>
             <ul class="social">
                 <li><a href="https://www.linkedin.com/in/danielle-dupuis-141b30159/" target="_blank"><svg width="32"
                             height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
