--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
             <h1>Get to know me!</h1>
             <div>
                 <picture>
-                    <source srcset="img/about/1x/img-danielle-about-1x.jpg" media="(max-width:767px)">
-                    <img src="img/about/2x/img-danielle-about-2x.jpg"
-                        alt="Danielle DuPuis in Ireland with a Tayto statue">
+                    <source srcset="img/about/1x/img-danielle-1x.JPG" media="(max-width:767px)">
+                    <img src="img/about/2x/img-danielle-2x.JPG"
+                        alt="Danielle in Ireland with a Tayto statue">
                 </picture>
             </div>
             <div class="row">
